# gitrw

./: Cargo.toml  README.md
crates/gitrwlib/: Cargo.toml
crates/gitrwlib/src/: lib.rs  packreader.rs
src/: main.rs  remove.rs
